# 2023.1-Dnit-UsuarioService

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  Todo.List.sln  UsuarioService.sln  docker-compose.yml  sonar-project.properties
.github/: pull_request_template.md
api/: Enums.cs  ListaPaginada.cs  PermissaoModel.cs  UfModel.cs  api.csproj
app/: .env  Program.cs  app.csproj  appsettings.Development.json  appsettings.Test.json  appsettings.json
auth/: AuthConfig.cs  AuthExceptionHandler.cs  AuthExceptions.cs  AuthService.cs  AuthStartup.cs  AuthUserModel.cs  README.md  auth.csproj
dominio/: Item.cs  RedefinicaoSenha.cs  RedefinicaoSenhaDTO.cs  UnidadeFederativa.cs  Usuario.cs  UsuarioDNIT.cs  UsuarioDTO.cs  UsuarioDnit.cs  UsuarioTerceiro.cs
repositorio/: ItemRepositorio.cs  UnidadeFederativaRepositorio.cs  UsuarioRepositorio.cs  repositorio.csproj
scripts/: .gitignore  curl_example.sh  dnit_updater.py  github.sh  install.sh  main.py  pyproject.toml  start.sh
service/: EmailService.cs  ItemService.cs  UsuarioService.cs  service.csproj
test/: AuthTest.cs  AutoMapperConfigTest.cs  Contexto.cs  ContextoConfigTest.cs  ContextoPostgresqlTest.cs  DominioControllerTest.cs  EditarUsuarioPerfilTest.cs  EmpresaControllerTest.cs  EmpresaRepositorioTest.cs  EmpresaServiceTest.cs  PerfilControllerTest.cs  PerfilRepositorioTest.cs  PerfilServiceTest.cs  PermissaoServiceTest.cs  RepositorioConfigTest.cs  ServicesConfigTest.cs  UnidadeFederativaRepositorioTest.cs  Usings.cs  UsuarioControllerTest.cs  UsuarioRepositorioTest.cs  UsuarioServiceTest.cs  test.csproj
(+122 files in other folders)
